WOA/infrastructure/k8s/auth-clusterip-depl.yaml
#prettier-ignore
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: europe-west4-docker.pkg.dev/GOOGLE_PROJECT/demo/auth
          imagePullPolicy: Always
          volumeMounts:
            - name: pubsub-credentials
              mountPath: /app/config
              subPath: keyfile.json
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 300m
              memory: 300Mi
      volumes:
        - name: pubsub-credentials
          secret:
            secretName: pubsub-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-srv
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
    - name: auth
      protocol: TCP
      port: 5000
      targetPort: 5000
