WOA/infrastructure/k8s/client-clusterip-depl.yaml
#prettier-ignore
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: europe-west4-docker.pkg.dev/GOOGLE_PROJECT/demo/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-srv
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
