WOA/infrastructure/k8s/notifications-clusterip-depl.yaml
#prettier-ignore
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
        - name: notifications
          image: europe-west4-docker.pkg.dev/GOOGLE_PROJECT/demo/notifications
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 300m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: notificaitons-clusterip-srv
spec:
  selector:
    app: notifications
  type: ClusterIP
  ports:
    - name: notifications
      protocol: TCP
      port: 5001
      targetPort: 5001
