WOA/infrastructure/k8s/postfeed-clusterip-depl.yaml
#prettier-ignore
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfeed-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postfeed
  template:
    metadata:
      labels:
        app: postfeed
    spec:
      containers:
        - name: postfeed
          image: europe-west4-docker.pkg.dev/GOOGLE_PROJECT/demo/postfeed
          imagePullPolicy: Always
          volumeMounts:
            - name: pubsub-credentials
              mountPath: /app/config
              subPath: keyfile.json
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 300m
              memory: 300Mi
      volumes:
        - name: pubsub-credentials
          secret:
            secretName: pubsub-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: postfeed-clusterip-srv
spec:
  selector:
    app: postfeed
  type: ClusterIP
  ports:
    - name: postfeed
      protocol: TCP
      port: 5002
      targetPort: 5002
