WOA/infrastructure/k8s/rabbitmq-srv.yaml
#prettier-ignore
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-nodeport-srv
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports: 
    - name: rabbitmq
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: rabbitmq-server
      protocol: TCP
      port: 15672
      targetPort: 15672
